hotel/src/app/(pages)/hotelinfo2/style.css
body {
    background-color: white;
}

.content-wrapper {
    background-color: #fff;
    margin: 0;
    padding: 0;
    width: 100%;
}

.image-container {
    margin-top: 82.7px;
    display: grid;
    grid-template-columns: minmax(1fr, 1024px) 1fr;
    grid-template-rows: repeat(2, 1fr);
    padding: 10px;
}

.image-wrapper {
    position: relative;
    grid-row: span 2;
    grid-column: span 1;
}

.overview {
    text-indent: 40px;
    grid-row: span 2;
    grid-column: 2 / 2;
}

/* Map would go in space 2,2, leaving it occupied by overview for now */

.main-photo {
    width: calc(100% - 20px);
    border-radius: 10px;
    max-width: 1024px;
}

.title {
    font-size: 2rem;
    font-weight: bold;
}

.section-title {
    font-size: 2rem;
    font-weight: bold;
}

.name-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: calc(100% - 20px);
}

.stats-section {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    background-color: #eee;
}

.rating-stat, .price-stat, .hours-stat {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 40px;
}

.subheading {
    font-weight: bold;
    font-size: 1.25rem;
}

.stat {
    font-weight: bolder;
    font-size: 2rem;
}

.image-overlay {
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100vw;
    min-height: 100vh;
    z-index: 999999;
    overflow: hidden;
    backdrop-filter: blur(10px);
}

.open-button {
    all: unset;
    width: 35px;
    height: 35px;
}

.masonry-container {
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: scroll;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0);
    display: grid;
    grid-template-columns: repeat(3, 300px);
    grid-template-rows: repeat(auto, 300px);
    width: max-content;
    gap: 10px;
    margin: 0 auto;
}

.close-button {
    all: unset;
    width: 35px;
    height: 35px;
    position: fixed;
    top: 20px;
    right: 20px;
    z-index: 9999999999;
    fill: white;
}

svg {
    width: 100%;
    height: 100%;
    position: relative;
}

button:hover {
    background-color: rgba(100, 100, 100, 0.5);
    cursor: pointer;
    border-radius: 50%;
}

.photo {
   display: block;
    width: 300px;
    height: 300px;
    object-fit: cover;
    margin: 0;
    padding: 0;
    border-radius: 20px;
}

.book-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 40px 0;
}

button:hover {
    border-radius: 10px;
}

.dropdown > button:hover {
    border-radius: 0;
}

.calendar-input, .calendar-input-first {
    min-width: 100px;
}

.guest-input {
    min-width: 75px;
}

@media (max-width: 958px) {
    .masonry-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        overflow-x: hidden;
        overflow-y: scroll;
    }

    .masonry-container, .image-overlay {
        width: 100vw;
        height: 100vh;
        align-items: center;
        justify-content: center;
    }

    .photo {
        width: calc(100vw - 20px);
        padding: 10px;
        border-radius: 20px;
    }
}

@media(max-width: 680px) {
    .main-photo {
        border-radius: 0;
        width: 100%;
        margin: 0;
    }

    .open-button {
        fill: white;
    }

    .image-container {
        display: block;
        padding: 0;
    }

    .image-wrapper {
        display: block;
        padding: 0;
    }

    .name-wrapper {
        position: absolute;
        bottom: 0;
        margin-bottom: 4px;
        width: 100%;
        padding: 10px;
        backdrop-filter: blur(1.5px);
    }

    .title {
        color: white;
    }

    .images {
        color: white;
    }

    .overview {
        padding: 10px;
    }

    .stats-section {
        flex-direction: column;
    }

    .dropdown-content {
        min-width: max-content;
        translate: -50px 0;
        justify-content: center;
    }

    .guest-input {
        width: 100%;
    }
}

@media (prefers-color-scheme: dark) {
    .stats-section {
        background-color: #111;
    }

    .content-wrapper {
        background-color: #000;
    }

    svg {
        fill: white;
    }

    body {
        background-color: #000;
    }

    .section-title {
        color: white;
    }
}

